--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(ex1)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp osm.h)
+set(SOURCE_FILES main.cpp osm.h osm.cpp)
 add_executable(ex1 ${SOURCE_FILES})
